fixed overflowing margin issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,16 +1,16 @@
 $brand-primary: #F1E200;
 $light-grey: #c0c0c0;
 $lighter-grey: #FAF9F9;
-
-html,
-body{
-  font-family: 'Open Sans', sans-serif;
-  margin: 0px;
-}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+html,
+body{
+  font-family: 'Open Sans', sans-serif;
+  margin:0;
+  padding:0;
 }
 section{
   padding: 4em 0;
@@ -57,7 +57,7 @@ section{
   }
   form{
     input{
-      width: 40%;
+      width: 43%;
       display: inline;
       font-size: 12px;
       text-transform: uppercase;
@@ -240,6 +240,7 @@ a:hover{
   }
   .section-cta .icon-3{
     width: 100%;
+    margin: 5px 0;
   }
   .section-preworkout .column-md{
     width: 100%;
